stderr
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
Hiker.kt:15:24: error: unresolved reference: INt
fun average(arr: Array<INt>): Double {
                       ^
